--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -112,7 +112,7 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "59b4b38a-4a1b-4c4b-ac59-bfc860c9a040",
-    "Id": "59b4b38a-4a1b-4c4b-ac59-bfc860c9a040",
+    "Id": "ff6a17d8-c7b1-4cc7-afe0-f843cafb4445",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
     "Name": "Badeco sljedivost i napredno sklad",
@@ -121,7 +121,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "Badeco sljedivost i napredno sklad",
+    "AppName": "10fa25e6-fe8b-4ffc-8409-a2772398f44c",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
