--- a/BSiNS/Src/xmlNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/xmlNalogZaProdaju.fx.yaml
@@ -1146,6 +1146,7 @@
 
                     TextCanvas5 As Text:
                         DisplayMode: =DisplayMode.Edit
+                        FontColor: =
                         Height: =328
                         Text: =sales.response
                         Width: =472
