--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -916,6 +916,17 @@
                     Y: =0
                     ZIndex: =1
 
+                ButtonCanvas1 As Button:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =32
+                    LayoutMinHeight: =32
+                    LayoutMinWidth: =96
+                    Text: ="Test"
+                    Width: =96
+                    X: =0
+                    Y: =0
+                    ZIndex: =2
+
     Button1 As button:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
