--- a/BSiNS/Src/xmlPrimke.fx.yaml
+++ b/BSiNS/Src/xmlPrimke.fx.yaml
@@ -500,7 +500,7 @@
                             FontColor: =
                             Height: =39
                             OnChange: |-
-                                =UpdateIf(colWarehouseLines, Gallery4_4.Selected.Item_No = ThisRecord.Item_No ,{Quantity: Value(warehouseQty.Value)})
+                                =UpdateIf(colWarehouseLines, Item_No = ThisRecord.Item_No ,{Quantity: Value(warehouseQty.Value)})
                             Value: =ThisItem.Quantity
                             Width: =132
                             X: =959
@@ -1501,7 +1501,7 @@
                         Shelf_No: warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Shelf_No,
                         Bin_Code: warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Bin_Code,
                         Zone_Code: warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Zone_Code,
-                        Item_No: warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Item_No,
+                        Item_No: Text(warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Item_No),
                         Quantity: Text(warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Quantity),
                         Qty_Base: warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Qty_Base,
                         Qty_Outstanding: warehouseJson.Warehouse_Receipt_Header.Warehouse_Receipt_Line.Qty_Outstanding,
