--- a/BSiNS/Src/xmlPrimke.fx.yaml
+++ b/BSiNS/Src/xmlPrimke.fx.yaml
@@ -1494,41 +1494,41 @@
                     Collect(
                         colWarehouseLines,
                         {
-                            No: Value(ThisRecord.No),
-                            Line_No: Value(ThisRecord.Line_No),
+                            No: Text(ThisRecord.No),
+                            Line_No: Text(ThisRecord.Line_No),
                             Source_Type: Text(ThisRecord.Source_Type),
                             Source_SubType: Text(ThisRecord.Source_SubType),
-                            Source_No: Value(ThisRecord.Source_No),
+                            Source_No: Text(ThisRecord.Source_No),
                             Source_Line_No: Text(ThisRecord.Source_Line_No),
                             Source_Document: Text(ThisRecord.Source_Document),
                             Location_Code: Text(ThisRecord.Location_Code),
                             Shelf_No: Text(ThisRecord.Shelf_No),
                             Bin_Code: Text(ThisRecord.Bin_Code),
-                            Zone_Code: Value(ThisRecord.Zone_Code),
-                            Item_No: Value(ThisRecord.Item_No),
-                            Quantity: Value(ThisRecord.Quantity),
-                            Qty_Base: Value(ThisRecord.Qty_Base),
-                            Qty_Outstanding: Value(ThisRecord.Qty_Outstanding),
-                            Qty_Outstanding_Base: Value(ThisRecord.Qty_Outstanding_Base),
-                            Qty_to_Receive: Value(ThisRecord.Qty_to_Receive),
+                            Zone_Code: Text(ThisRecord.Zone_Code),
+                            Item_No: Text(ThisRecord.Item_No),
+                            Quantity: Text(ThisRecord.Quantity),
+                            Qty_Base: Text(ThisRecord.Qty_Base),
+                            Qty_Outstanding: Text(ThisRecord.Qty_Outstanding),
+                            Qty_Outstanding_Base: Text(ThisRecord.Qty_Outstanding_Base),
+                            Qty_to_Receive: Text(ThisRecord.Qty_to_Receive),
                             Qty_to_Receive_Base: Text(ThisRecord.Qty_to_Receive_Base),
-                            Qty_Received: Value(ThisRecord.Qty_Received),
-                            Qty_Received_Base: Value(ThisRecord.Qty_Received_Base),
-                            UOM_Code: Value(ThisRecord.UOM_Code),
-                            Qty_per_UOM: Value(ThisRecord.Qty_per_UOM),
-                            Description: Value(ThisRecord.Description),
-                            Status: Value(ThisRecord.Status),
-                            Sorting_Sequence_No: Value(ThisRecord.Sorting_Sequence_No),
+                            Qty_Received: Text(ThisRecord.Qty_Received),
+                            Qty_Received_Base: Text(ThisRecord.Qty_Received_Base),
+                            UOM_Code: Text(ThisRecord.UOM_Code),
+                            Qty_per_UOM: Text(ThisRecord.Qty_per_UOM),
+                            Description: Text(ThisRecord.Description),
+                            Status: Text(ThisRecord.Status),
+                            Sorting_Sequence_No: Text(ThisRecord.Sorting_Sequence_No),
                             Due_Date: Text(ThisRecord.Due_Date),
-                            Starting_Date: Value(ThisRecord.Starting_Date),
-                            Cubage: Value(ThisRecord.Cubage),
-                            Weight: Value(ThisRecord.Weight),
-                            Not_upd_by_SDP: Value(ThisRecord.Not_upd_by_SDP),
-                            Posting_From_Whs_Ref: Value(ThisRecord.Posting_From_Whs_Ref),
-                            Qty_to_Cross_Dock: Value(ThisRecord.Qty_to_Cross_Dock),
-                            Qty_to_Cross_Dock_Base: Value(ThisRecord.Qty_to_Cross_Dock_Base),
-                            Cross_Dock_Zone_Code: Value(ThisRecord.Cross_Dock_Zone_Code),
-                            Cross_Dock_Bin_Code: Value(ThisRecord.Cross_Dock_Bin_Code)
+                            Starting_Date: Text(ThisRecord.Starting_Date),
+                            Cubage: Text(ThisRecord.Cubage),
+                            Weight: Text(ThisRecord.Weight),
+                            Not_upd_by_SDP: Text(ThisRecord.Not_upd_by_SDP),
+                            Posting_From_Whs_Ref: Text(ThisRecord.Posting_From_Whs_Ref),
+                            Qty_to_Cross_Dock: Text(ThisRecord.Qty_to_Cross_Dock),
+                            Qty_to_Cross_Dock_Base: Text(ThisRecord.Qty_to_Cross_Dock_Base),
+                            Cross_Dock_Zone_Code: Text(ThisRecord.Cross_Dock_Zone_Code),
+                            Cross_Dock_Bin_Code: Text(ThisRecord.Cross_Dock_Bin_Code)
                         }
                     );
                     
