--- a/BSiNS/Src/xmlPrimke.fx.yaml
+++ b/BSiNS/Src/xmlPrimke.fx.yaml
@@ -1458,8 +1458,8 @@
                                     Posting_From_Whs_Ref: Text(Posting_From_Whs_Ref),
                                     Qty_to_Cross_Dock: Text(Qty_to_Cross_Dock),
                                     Qty_to_Cross_Dock_Base: Text(Qty_to_Cross_Dock_Base),
-                                    Cross_Dock_Zone_Code: Text("Cross_Dock_Zone_Code"),
-                                    Cross_Dock_Bin_Code: Text("Cross_Dock_Bin_Code")
+                                    Cross_Dock_Zone_Code: Text(Cross_Dock_Zone_Code),
+                                    Cross_Dock_Bin_Code: Text(Cross_Dock_Bin_Code)
                                 }
                             )
                         }
