--- a/BSiNS/Src/xmlPrimke.fx.yaml
+++ b/BSiNS/Src/xmlPrimke.fx.yaml
@@ -1429,6 +1429,7 @@
                                     No: Text(No),
                                     Line_No: Text(Line_No),
                                     Source_Type: Text(Source_Type),
+                                    Source_SubType: Text(Source_SubType),
                                     Source_No: Text(Source_No),
                                     Source_Line_No: Text(Source_Line_No),
                                     Source_Document: Text(Source_Document),
